# STM32G070CBTX_FreeRTOS

./: README.md
application/: .cproject  .mxproject  STM32G070CBTX_FreeRTOS.ioc
application/Core/Inc/: FreeRTOSConfig.h  stm32g0xx_it.h
application/Core/Src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c
project/: .cproject  .mxproject  STM32G070CBTX_FreeRTOS.ioc
project/Core/Inc/: FreeRTOSConfig.h  common.h  main.h  stm32g0xx_it.h
project/Core/Src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c
project/cfg_btn/: cfg_btn.c
project/lcd/: lcd.c  lcd.h
project/lora/: lora.c  lora.h  lora_config.h
project/lora/sx126x_driver-2.5.0/: CHANGELOG.md  CMakeLists.txt  README.md
project/lora/sx126x_driver-2.5.0/src/: CMakeLists.txt  lr_fhss_mac.c  sx126x.c  sx126x.h  sx126x_bpsk.c  sx126x_bpsk.h  sx126x_driver_version.c  sx126x_driver_version.h  sx126x_hal.c  sx126x_hal.h  sx126x_lr_fhss.c  sx126x_lr_fhss.h  sx126x_status.h
